# MaxVideoPlayer

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  eslint.config.mjs  package-lock.json  package.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release-bump.yml  release-pipeline.yml  release-tag.yml  release.yml
apps/android/: README.md
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: AppLayout.tsx  DonationPopup.tsx  SplashScreen.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx
apps/desktop/src/components/channels/: Breadcrumb.test.tsx  Breadcrumb.tsx  CategoryBrowser.test.tsx  CategoryBrowser.tsx  CategoryFilter.tsx  CategoryManager.tsx  ChannelCard.tsx  ChannelList.tsx  EpgTimelineBar.tsx  GroupList.tsx  HistoryTab.tsx  LiveInfoDrawer.tsx  MovieInfoDrawer.tsx  PinnedGroupsRow.tsx  RecentlyPlayedRow.tsx  SearchBar.tsx  SeriesDetailModal.tsx
apps/desktop/src/components/epg/: ProgramGuide.tsx
apps/desktop/src/components/player/: ChannelOverlay.tsx  Controls.tsx  SubtitleOverlay.tsx  SubtitlePicker.tsx  VideoPlayer.tsx
apps/desktop/src/components/settings/: Settings.tsx
apps/desktop/src/hooks/: useChannels.test.ts  useChannels.ts  useDonationPrompt.test.ts  useDonationPrompt.ts  useGroupHierarchy.test.ts  useGroupHierarchy.ts  useMpv.test.ts  useMpv.ts  usePlatform.ts  useSplashScreen.test.ts  useSplashScreen.ts  useUpdateChecker.test.ts  useUpdateChecker.ts
apps/desktop/src/lib/: channels.test.ts  date.test.ts  date.ts  format.test.ts  format.ts  fullscreen-context.tsx  openUrl.ts  subtitle-delay.test.ts  subtitle-delay.ts  subtitle-parser.test.ts  subtitle-parser.ts  tauri.ts  types.ts  utils.test.ts
apps/desktop/src/styles/: globals.css
apps/ios/: README.md
coverage/: coverage-summary.json  index.html
coverage/src/: App.tsx.html  index.html
coverage/src/components/: AppLayout.tsx.html  DonationPopup.tsx.html  SplashScreen.tsx.html  UpdateBanner.tsx.html  index.html
coverage/src/components/channels/: Breadcrumb.tsx.html  CategoryBrowser.tsx.html  CategoryFilter.tsx.html  CategoryManager.tsx.html  ChannelCard.tsx.html  ChannelList.tsx.html  EpgTimelineBar.tsx.html  GroupList.tsx.html  HistoryTab.tsx.html  LiveInfoDrawer.tsx.html  MovieInfoDrawer.tsx.html  PinnedGroupsRow.tsx.html  RecentlyPlayedRow.tsx.html  SearchBar.tsx.html  SeriesDetailModal.tsx.html  index.html
coverage/src/components/epg/: ProgramGuide.tsx.html  index.html
coverage/src/components/player/: ChannelOverlay.tsx.html  Controls.tsx.html  SubtitleOverlay.tsx.html  SubtitlePicker.tsx.html  VideoPlayer.tsx.html  index.html
coverage/src/components/playlist/: AddProvider.tsx.html  PlaylistManager.tsx.html  ProviderSettingsModal.tsx.html  index.html
coverage/src/components/settings/: Settings.tsx.html  index.html
coverage/src/components/ui/: badge.tsx.html  button.tsx.html  card.tsx.html  index.html  input.tsx.html  ratings-row.tsx.html  scroll-area.tsx.html  select.tsx.html  slider.tsx.html
coverage/src/hooks/: index.html  useChannels.ts.html  useDonationPrompt.ts.html  useGroupHierarchy.ts.html  useMpv.ts.html  usePlatform.ts.html  useSplashScreen.ts.html  useUpdateChecker.ts.html
coverage/src/lib/: date.ts.html  format.ts.html  fullscreen-context.tsx.html  index.html  openUrl.ts.html  subtitle-delay.ts.html  subtitle-parser.ts.html  tauri.ts.html  types.ts.html  utils.ts.html
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/ai/: gemini.rs
crates/core/src/cache/: store.rs
crates/core/src/iptv/: epg.rs  m3u.rs  mdblist.rs  mod.rs  omdb.rs  opensubtitles.rs  whatson.rs  xtream.rs
crates/core/src/models/: channel.rs  mod.rs  playlist.rs
crates/tauri-plugin-mpv/: Cargo.toml  build.rs
crates/tauri-plugin-mpv/permissions/: default.toml
crates/tauri-plugin-mpv/permissions/autogenerated/: reference.md
crates/tauri-plugin-mpv/permissions/autogenerated/commands/: mpv_get_state.toml  mpv_pause.toml  mpv_play.toml  mpv_seek.toml  mpv_set_bounds.toml  mpv_set_visible.toml  mpv_set_volume.toml
crates/tauri-plugin-mpv/permissions/schemas/: schema.json
crates/tauri-plugin-mpv/src/: android.rs  commands.rs  desktop.rs  engine.rs  idle_inhibit.rs  ios.rs  lib.rs  linux.rs  macos.rs  mpv.rs  renderer.rs
docs/plans/: 2026-03-07-mpv-embedding-rewrite-design.md  2026-03-07-mpv-embedding-rewrite.md  2026-03-09-dedup-and-drawer-design.md  2026-03-09-dedup-and-drawer.md  2026-03-09-epg-omdb-history-favorites-design.md  2026-03-09-epg-omdb-history-favorites-impl.md  2026-03-09-rich-drawer-design.md  2026-03-09-rich-drawer-impl.md
scripts/: build-libmpv.sh  bump-version.py  bundle-libmpv-linux.sh  bundle-libmpv.sh  dev-linux.sh  release.sh  test-release-consistency.py  validate-release.sh
(+10 files in other folders)
