[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tauri-plugin-mpv",
    "apps/desktop/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1"
thiserror = "2"
