[package]
name = "mvp-core"
version = "0.1.0"
edition = "2021"
description = "Core business logic for MaxVideoPlayer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.10"
memmap2 = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }
