[package]
name = "tauri-plugin-mpv"
version = "0.1.0"
edition = "2021"
description = "Tauri v2 plugin for MPV video playback"
links = "tauri-plugin-mpv"

[lints.rust]
# objc crate's msg_send! uses cfg(feature = "cargo-clippy") - expect it to avoid warnings
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tauri = { version = "2", features = [] }
libmpv2 = { version = "5", features = ["render"] }
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
dispatch = "0.2"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
khronos-egl = { version = "6", features = ["dynamic"] }
gl = "0.14"
x11-dl = "2"
glib = "0.20"
libc = "0.2"
wayland-client = "0.31"
wayland-egl = "0.32"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
