[package]
name = "max-video-player"
version = "0.4.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
mvp-core = { path = "../../../crates/core" }
tauri-plugin-mpv = { path = "../../../crates/tauri-plugin-mpv" }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "max_video_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
