[package]
name = "max-video-player"
version = "0.4.7"
edition = "2021"
description = "Cross-platform IPTV player — watch live TV, movies, and series from any M3U or Xtream Codes provider"
homepage = "https://github.com/MaxMB15/MaxVideoPlayer"
repository = "https://github.com/MaxMB15/MaxVideoPlayer"
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Max Boksem"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
mvp-core = { path = "../../../crates/core" }
tauri-plugin-mpv = { path = "../../../crates/tauri-plugin-mpv" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[lib]
name = "max_video_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
